--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-fastapi==0.62.0
-jmespath==0.10.0
-packaging==20.9
-pluggy==0.13.1
-py==1.10.0
-pyasn1==0.4.8
-pydantic==1.6.1
-pyparsing==2.4.7
-pytest==6.2.1
-python-dateutil==2.8.1
-python-dotenv==0.15.0
+aiofiles==0.8.0
+anyio==3.6.1
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.5
+fastapi==0.79.0
+h11==0.13.0
+idna==3.3
+pydantic==1.9.1
+PyJWT==2.4.0
+python-dotenv==0.20.0
 python-multipart==0.0.5
-PyYAML==5.3.1
-requests==2.25.0
-rsa==4.5
-six==1.15.0
-starlette==0.13.6
-toml==0.10.2
-urllib3==1.25.10
-uvicorn==0.12.3
+pytz==2022.1
+requests==2.28.1
+six==1.16.0
+sniffio==1.2.0
+starlette==0.19.1
+twilio==7.12.0
+typing_extensions==4.3.0
+urllib3==1.26.11
+uvicorn==0.18.2
+
